Atualizações das telas

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/CSS/main.css" />
-    <script src="/JS/main.js"></script>
+    <link rel="stylesheet" href="/CSS/main.css" />
     <title>Task Manager</title>
   </head>
-  <body></body>
+
+  <body>
+    <section class="logobar">
+      <img class="imagem1" src="./IMAGENS/Component 3.png" alt="logo" />
+      <div class="fonte">
+        <span class="text-primary">Manage your task, quickly.</span>
+      </div>
+
+      <div id="elipse"></div>
+
+      <div id="Vector">
+        <img src="./IMAGENS/Vector.png" alt="flecha" />
+      </div>
+    </section>
+
+    <script src="/JS/main.js"></script>
+  </body>
 </html>
