--- a/Tela 2/Login.html
+++ b/Tela 2/Login.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="inicio">
-      <img class="imagem" src="/Tela 2/IMAGENS/Group 3.png" />
+      <img class="imagem" src="/HTML+CSS+JS/Tela 2/IMAGENS/Group 3.png" />
       <div class="caixa">
-        <form>
+        <form action="home.html">
           <input type="email" placeholder="Email" id="email" />
           <input type="password" placeholder="Password" id="password" />
           <input type="submit" class="botao" value="Log in" />
