--- a/Tela 3/home.html
+++ b/Tela 3/home.html
@@ -7,16 +7,26 @@
     <link rel="stylesheet" href="./CSS + JS/main3.css" />
     <title>Task Manager</title>
   </head>
+
   <body>
     <div class="inicio">
       <p>Let's check out your today's task</p>
       <div class="rectangle-3">
         <div>
           <img class="diario" src="./IMAGENS/Diary.png" />
-          <div class="component-4">
-            <p id="frase">Task Categories</p>
-          </div>
         </div>
+        <button class="details">
+          <span class="text-primary">Details</span>
+        </button>
+      </div>
+      <p class="frase">Task Categorie</p>
+      <div class="caixa"></div>
+      <div class="tudo">
+        <img class="home" src="./IMAGENS/home.png" />
+        <img class="calendario" src="./IMAGENS/Calendar.png" />
+        <img class="bell" src="./IMAGENS/bell.png" />
+        <img class="perfil" src="./IMAGENS/profile circle.png" />
+        <img class="vector" src="./IMAGENS/Vector.png" />
       </div>
     </div>
 
