--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/main.css" />
+    <link rel="stylesheet" href="./CSS/main.css" />
     <title>Task Manager</title>
   </head>
 
@@ -14,14 +14,16 @@
       <div class="fonte">
         <span class="text-primary">Manage your task, quickly.</span>
       </div>
-
-      <div id="elipse"></div>
+      <div id="elipse">
+        <a href="http://127.0.0.1:5500/HTML+CSS+JS/login.html"
+          ><button>meu botao</button></a
+        >
+      </div>
 
       <div id="Vector">
         <img src="./IMAGENS/Vector.png" alt="flecha" />
       </div>
     </section>
-
-    <script src="/JS/main.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
