--- a/Tela 2/Login.html
+++ b/Tela 2/Login.html
@@ -11,7 +11,7 @@
     <div class="inicio">
       <img class="imagem" src="/HTML+CSS+JS/Tela 2/IMAGENS/Group 3.png" />
       <div class="caixa">
-        <form action="home.html">
+        <form>
           <input type="email" placeholder="Email" id="email" />
           <input type="password" placeholder="Password" id="password" />
           <input type="submit" class="botao" value="Log in" />
