--- a/Tela 3/home.html
+++ b/Tela 3/home.html
@@ -20,13 +20,14 @@
         </button>
       </div>
       <p class="frase">Task Categorie</p>
-      <div class="caixa"></div>
-      <div class="tudo">
-        <img class="home" src="./IMAGENS/home.png" />
-        <img class="calendario" src="./IMAGENS/Calendar.png" />
-        <img class="bell" src="./IMAGENS/bell.png" />
-        <img class="perfil" src="./IMAGENS/profile circle.png" />
-        <img class="vector" src="./IMAGENS/Vector.png" />
+      <div class="caixa">
+        <div class="tudo">
+          <img class="home" src="./IMAGENS/home.png" />
+          <img class="calendario" src="./IMAGENS/Calendar.png" />
+          <img class="bell" src="./IMAGENS/bell.png" />
+          <img class="perfil" src="./IMAGENS/profile circle.png" />
+          <img class="vector" src="./IMAGENS/Vector.png" />
+        </div>
       </div>
     </div>
 
