--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
       <div class="fonte">
         <span class="text-primary">Manage your task, quickly.</span>
       </div>
-      <div id="elipse">
-        <a href="http://127.0.0.1:5500/HTML+CSS+JS/login.html"
-          ><button>meu botao</button></a
-        >
-      </div>
+      <div id="elipse"></div>
 
-      <div id="Vector">
+      <div id="vector">
         <img src="./IMAGENS/Vector.png" alt="flecha" />
       </div>
     </section>
